Remove icon-size. Fixes #23
Specifying an icon size seems to allow for the icons in the dash to occasionally overlap. This fixes this issue.

--- a/src/common/sass/widgets/_app-grid.scss
+++ b/src/common/sass/widgets/_app-grid.scss
@@ -6,8 +6,6 @@
   spacing: $large_padding*2;
   -shell-grid-horizontal-item-size: 136px;
   -shell-grid-vertical-item-size: 136px; 
-  
-  .overview-icon { icon-size: $large_icon_size*2; }
 }
 
 .system-action-icon {
